tests/baselines/reference/allowSyntheticDefaultImports3.errors.txt
error TS5107: Option 'allowSyntheticDefaultImports=false' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
error TS5107: Option 'module=System' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
a.ts(1,8): error TS1192: Module '"b"' has no default export.


!!! error TS5107: Option 'allowSyntheticDefaultImports=false' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
!!! error TS5107: Option 'module=System' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== a.ts (1 errors) ====
    import Namespace from "./b";
           ~~~~~~~~~
!!! error TS1192: Module '"b"' has no default export.
    export var x = new Namespace.Foo();
    
==== b.ts (0 errors) ====
    export class Foo {
    	member: string;
    }
    